[package]
name = "dadagen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = [ "derive"] }
pest = { version = "2.7" }
pest_derive = { version = "2.7" }
rand = "0.8.5"
regex = "1.10.2"
