[package]
name = "dadagen"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = [ "derive"] }
csv = "1.3.0"
lazy_static = "1.4.0"
pest = { version = "2.7" }
pest_derive = { version = "2.7" }
petgraph = "0.6.4"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
xdg = "2.5.2"

